fix layout shift

--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -609,6 +609,7 @@ body {
 
     .first {
         margin-top: -1rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -722,6 +723,7 @@ main>.content>.first {
 .mySwiper1 {
     width: 100%;
     height: 100%;
+    min-height: 32rem;
     margin: 0;
     background-color: var(--aot-light-color--);
     object-fit: cover;
@@ -2238,6 +2240,7 @@ aside .content>img {
 }
 
 @media only screen and (max-width:544px) {
+
     .exp {
         height: 38rem;
     }
